# Rust-local-LLMs-inference-service

./: Cargo.toml
model/: README.md
src/: main.rs
static/: index.html  index_old.html
web/: Cargo.toml
web/src/: main.rs
web/templates/: index.html
